# hw-docs-server

./: .gitignore  README.md  docker-compose.yml
docker/: service.Dockerfile
services/analytics/: pyproject.toml  run.sh
services/analytics/analytics/: config.py  dependencies.py  main.py
services/analytics/analytics/connectors/: storage.py  wordcloud.py
services/analytics/analytics/databases/: analytics.py  base.py
services/analytics/analytics/fs/: filesystem.py
services/analytics/analytics/models/: analytics.py
services/analytics/analytics/routers/: analytics.py  files.py
services/analytics/analytics/services/: analytics.py
services/gateway/: pyproject.toml  run.sh
services/gateway/gateway/: config.py  dependencies.py  exception_handler.py  main.py
services/gateway/gateway/routers/: analytics.py  files.py
services/gateway/gateway/services/: router.py
services/storage/: pyproject.toml  run.sh
services/storage/storage/: config.py  dependencies.py  main.py
services/storage/storage/databases/: base.py  files.py
services/storage/storage/fs/: __init__.py  storage.py
services/storage/storage/fs/drivers/: __init__.py  base.py  filesystem.py  s3.py
services/storage/storage/routers/: files.py
services/storage/storage/services/: storage.py
