[project]
name = "storage"
version = "0.1.0"
description = ""
authors = [{ name = "d0gied", email = "german.n.u@mail.ru" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy[asyncio,asyncpg] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
]

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py313"]
skip-magic-trailing-comma = true


[tool.isort]
profile = "black"
line_length = 88
lines_after_imports = 2


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
